[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/IntroNivelControl.gd" type="Script" id=1]
[ext_resource path="res://Sprites/EspecificosDeNivel/IntroNivel/spr_bosses.png" type="Texture" id=2]
[ext_resource path="res://Sounds/Musica/mus_inicio_nivel.ogg" type="AudioStream" id=3]
[ext_resource path="res://shaders/sh_blanco.shader" type="Shader" id=4]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 4 )
shader_param/color = Vector3( 1, 1, 1 )

[sub_resource type="Animation" id=2]
resource_name = "anim_intro_nivel"
length = 7.0
tracks/0/type = "audio"
tracks/0/path = NodePath("AudioStreamPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 3 )
} ],
"times": PoolRealArray( 0 )
}
tracks/1/type = "value"
tracks/1/path = NodePath("IconoBossBlanco:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1.5, 1.6, 2, 3.1, 3.2, 3.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("IconoBoss:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3.2, 3.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ColorRect:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 3.2, 3.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="IntroNivel" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 642.0
margin_bottom = 364.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IconoBoss" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 420, 189 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
vframes = 3

[node name="IconoBossBlanco" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 419, 189 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
vframes = 3

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -5.0
bus = "Musica"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/anim_intro_nivel = SubResource( 2 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
